test/expected/passthrough/3.alias.binding/binding/se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: "2020-03-03T01:53:35Z"
  generation: 1
  labels:
    mesh: passthrough
  name: binding-passthrough-helloworldyall-intermesh
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: cb062839-5cf1-11ea-a6e3-d25a297f6585
  resourceVersion: "53785729"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/serviceentries/binding-passthrough-helloworldyall-intermesh
  uid: cb1fd5c2-5cf1-11ea-bca4-be6eb315559a
spec:
  endpoints:
  - address: 169.62.214.226
    ports:
      http: 15443
  hosts:
  - helloworldyall.default.svc.cluster.local
  ports:
  - name: http
    number: 5000
    protocol: HTTP
  resolution: STATIC
