test/expected/passthrough/3.alias.binding/binding/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-03-03T02:29:06Z"
  labels:
    mesh: helloworld
    role: ingress-svc
  name: helloworldyall
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: c14db974-5cf6-11ea-a6e3-d25a297f6585
  resourceVersion: "53789469"
  selfLink: /api/v1/namespaces/default/services/helloworldyall
  uid: c1827290-5cf6-11ea-b294-aaa2fadece5a
spec:
  clusterIP: 172.21.243.121
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
