test/expected/passthrough/3.alias.binding/binding/svcbinding.yaml
apiVersion: mm.ibm.istio.io/v1
kind: ServiceBinding
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"mm.ibm.istio.io/v1","kind":"ServiceBinding","metadata":{"annotations":{},"name":"helloworld","namespace":"default"},"spec":{"alias":"helloworldyall","endpoints":["169.62.214.226:15443"],"mesh_fed_config_selector":{"fed-config":"passthrough"},"name":"helloworld","namespace":"default","port":5000}}
  creationTimestamp: "2020-03-03T01:53:35Z"
  finalizers:
  - mm.ibm.istio.io
  generation: 2
  name: helloworld
  namespace: default
  resourceVersion: "53785727"
  selfLink: /apis/mm.ibm.istio.io/v1/namespaces/default/servicebindings/helloworld
  uid: cb062839-5cf1-11ea-a6e3-d25a297f6585
spec:
  alias: helloworldyall
  endpoints:
  - 169.62.214.226:15443
  mesh_fed_config_selector:
    fed-config: passthrough
  name: helloworld
  namespace: default
  port: 5000
status: {}
